--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>Horde Heroes — Pages Safe</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <title>Horde Heroes (Pages Safe)</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
     <style>
-      html, body { margin:0; height:100%; background:#0f141b; }
-      #game { width:100vw; height:100vh; }
-      .ui { position:fixed; right:8px; bottom:8px; color:#9ab; font:12px/1.2 ui-sans-serif, system-ui; }
+      html,body{margin:0;background:#0f1620;height:100%;}
+      #game{width:100vw;height:100vh;overflow:hidden}
+      .banner{position:fixed;left:8px;bottom:8px;color:#a9c1d9;font:12px/1.2 ui-sans-serif,system-ui}
     </style>
   </head>
   <body>
     <div id="game"></div>
-    <div class="ui">PC: Arrows/WASD + Space • Touch: buttons</div>
+    <div class="banner">PC: WASD/Arrows + Space • Touch: buttons</div>
     <script src="game.js"></script>
   </body>
 </html>
