--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <title>Horde Heroes (Pages Safe)</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <title>Horde Heroes</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
     <style>
-      html,body{margin:0;background:#0f1620;height:100%;}
-      #game{width:100vw;height:100vh;overflow:hidden}
-      .banner{position:fixed;left:8px;bottom:8px;color:#a9c1d9;font:12px/1.2 ui-sans-serif,system-ui}
+      html,body{margin:0;background:#0f1420;height:100%;}
+      #game{width:100vw;height:100vh;overflow:hidden;}
+      .note{position:fixed;left:8px;bottom:8px;color:#9ab;opacity:.9;font-family:system-ui,ui-sans-serif;font-size:12px}
     </style>
   </head>
   <body>
     <div id="game"></div>
-    <div class="banner">PC: WASD/Arrows + Space • Touch: buttons</div>
+    <div class="note">PC: WASD/Arrows + Space • Touch: D‑pad and Shoot</div>
     <script src="game.js"></script>
   </body>
 </html>
